corpus/basic.txt
=====================================
Variable declaration and assignment
=====================================

var x = 10;
var y = "hello";
x = 20;
y = y ~ " world";

---

(source_file
  (variable_declaration
    name: (identifier)
    value: (number))
  (variable_declaration
    name: (identifier)
    value: (string))
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (number)))
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (binary_expression
        left: (identifier)
        operator: "~"
        right: (string)))))

=====================================
Function definition and call
=====================================

func add(a, b) {
  return a + b;
}

var result = add(5, 10);

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (identifier)
      (identifier))
    body: (block
      (return_statement
        (binary_expression
          left: (identifier)
          operator: "+"
          right: (identifier)))))
  (variable_declaration
    name: (identifier)
    value: (function_call
      function: (identifier)
      arguments: (argument_list
        (number)
        (number)))))
